--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -16,7 +16,7 @@
               Escuchar En Vivo
             </span>
             <audio controls autoplay class="w-full">
-              <source src="http://95.154.195.3:19654/;stream" type="audio/mpeg">
+              <source src="https://95.154.195.3:19654/;stream" type="audio/mpeg">
               Tu navegador no soporta el reproductor de audio.
             </audio>
           </div>
