Actualizado el enlace de transmisión de la radio

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -16,7 +16,7 @@
               Escuchar En Vivo
             </span>
             <audio controls autoplay class="w-full">
-              <source src="https://uk23freenew.listen2myradio.com/live.mp3?typeportmount=s1_19654_stream_606143253" type="audio/mpeg">
+              <source src="https://stream.zeno.fm/oa7brrybk0vuv" type="audio/mpeg">
               Tu navegador no soporta el reproductor de audio.
             </audio>
           </div>
